<resources>
    <string name="app_name">Libix</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Bottom Nav Bar -->
    <string name="open">Open Tickets</string>
    <string name="closed">Closed Tickets</string>
    <string name="counter">Counter</string>
    <string name="new_tix">New Ticket</string>
    <string name="profile">Profile</string>

    <!-- Open Tickets -->
    <string name="resolving_text">Ongoing</string>
    <string name="solution_hint">Enter the solution</string>

    <!-- Closed Tickets -->
    <string name="closed_trouble_ticket_description">Ticket Details</string>
    <string name="closed_trouble_ticket_solution">Solution</string>
    <string name="ticket_default_solution">No details</string>

    <!-- Main Fragment -->
    <string name="synchronizing_tickets">Syncing…</string>
    <string name="fetched_data">Fetched data from server</string>
    <string name="no_tech_support_tickets">No tickets. Congrats!</string>
    <string name="open_tickets_count_label">Open </string>
    <string name="ongoing_tickets_count_label">Ongoing </string>
    <string name="sync_message">Please sync your tickets</string>
    <string name="connect_microsoft_button">Connect</string>


    <!-- Closed Tickets Fragment -->
    <string name="search_hint">Search closed tickets</string>

    <!-- Counter Fragment -->
    <string name="counter_fragment_title">Counter</string>
    <string name="error">Error</string>
    <string name="daily_counter_title">Daily</string>
    <string name="monthly_counter_title">Monthly</string>
    <string name="add_one">+1</string>
    <string name="subtract_one">-1</string>
    <string name="add_five">+5</string>

    <!-- New Ticket Fragment -->
    <string name="new_ticket_fragment_title">New Ticket</string>
    <string name="new_ticket_email_hint">Email</string>
    <string name="new_ticket_subject_hint">Subject</string>
    <string name="new_ticket_message_hint">Message</string>

    <!-- Profile Fragment -->
    <string name="tickets_closed_title">Tickets Closed</string>

    <!-- Menu -->
    <string name="menu_logout">Logout</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_statistics">Stats</string>

    <!-- Buttons -->
    <string name="close_button">Close</string>
    <string name="update_status_button">Solving</string>
    <string name="solution_button_text">Submit</string>
    <string name="search_button">Search</string>

    <string name="fab_content_desc">Send new support ticket</string>
    <string name="fab_counter_content_desc">Submit new count for today</string>

    <!-- Preference Titles -->
    <string name="notifications_header">Notifications</string>
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Notification Preferences -->
    <string name="notifications_title">Enable push notifications</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Email signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>

    <!-- Sign Out Alert -->
    <string name="sign_out_title">Disconnect</string>
    <string name="sign_out_text">Are you sure you would like to disconnect the ticketing account?</string>
    <string name="sign_out_positive">Disconnect</string>
    <string name="sign_out_cancel">Cancel</string>

    <!-- Outlook Not Connected -->
    <string name="outlook_disconnected">No Outlook account connected. Please connect the outlook account associated with the technical support tickets.</string>

    <!-- Edit Profile Fragment -->
    <string name="edit_user_first_name">First Name</string>
    <string name="edit_user_last_name">Last Name</string>

    <!-- Months -->
    <string-array name="months">
        <item>Jan</item>
        <item>Feb</item>
        <item>Mar</item>
        <item>Apr</item>
        <item>May</item>
        <item>Jun</item>
        <item>Jul</item>
        <item>Aug</item>
        <item>Sep</item>
        <item>Oct</item>
        <item>Nov</item>
        <item>Dec</item>
    </string-array>
</resources>