<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="8dp"
    android:background="@drawable/ticket_border"
    android:clipToPadding="false"
    android:layout_marginVertical="8dp"
    app:cardElevation="6dp"
    app:cardCornerRadius="7dp">

    <!--
    <TextView
        android:id="@+id/ticket_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent" />
        -->

    <RelativeLayout
        android:id="@+id/closed_ticket_relative_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/closed_ticket_subject"
            android:layout_width="260dp"
            android:layout_height="35dp"
            android:layout_marginStart="8dp"
            android:ellipsize="end"
            android:maxLines="1"
            android:textColor="@android:color/black"
            android:textSize="22sp"
            android:textStyle="bold|italic" />

        <TextView
            android:id="@+id/closed_ticket_status"
            android:layout_width="100dp"
            android:layout_height="35dp"
            android:layout_alignParentEnd="true"
            android:textColor="@android:color/holo_red_dark"
            android:textSize="22sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/closed_ticket_description"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:layout_below="@id/closed_ticket_subject"
            android:layout_marginHorizontal="8dp"
            android:layout_marginTop="1dp"
            android:ellipsize="end"
            android:maxLines="3"
            android:textSize="14sp"
            android:textStyle="bold" />

        <LinearLayout
            android:id="@+id/closed_ticket_expanded_description_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_below="@id/closed_ticket_subject"
            android:layout_marginVertical="8dp"
            android:layout_marginHorizontal="12dp"
            android:visibility="gone">

            <TextView
                android:id="@+id/closed_ticket_expanded_text_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/closed_trouble_ticket_description"
                android:textSize="14sp"
                android:textColor="#000f96"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/closed_ticket_expanded_description_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ticket_default_solution"
                android:textSize="20sp"
                android:textColor="@android:color/black"
                android:layout_marginBottom="16dp" />

            <TextView
                android:id="@+id/closed_ticket_solution_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="?attr/colorAccent"
                android:text="@string/closed_trouble_ticket_solution"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/closed_ticket_solution"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:textColor="@android:color/black"
                android:textSize="20sp" />
        </LinearLayout>

    </RelativeLayout>

    <TextView
        android:id="@+id/spacing"
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:text=" "
        app:layout_constraintTop_toBottomOf="@+id/closed_ticket_relative_layout" />


</androidx.cardview.widget.CardView>