<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="8dp"
    android:layout_marginVertical="8dp"
    android:clipToPadding="false"
    app:cardElevation="6dp"
    app:cardCornerRadius="7dp">

    <!--
    <TextView
        android:id="@+id/ticket_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent" />
        -->

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:layout_marginStart="4dp"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/ticket_subject"
            android:layout_width="280dp"
            android:layout_height="35dp"
            android:ellipsize="end"
            android:maxLines="1"
            android:textColor="@android:color/black"
            android:textSize="22sp"
            android:textStyle="bold|italic" />

        <TextView
            android:id="@+id/ticket_status"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="8dp"
            android:textColor="#000f96"
            android:textSize="22sp"
            android:textStyle="bold" />


        <LinearLayout
            android:id="@+id/ticket_controls_view"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:layout_below="@id/ticket_status"
            android:orientation="horizontal"
            android:weightSum="10">

            <TextView
                android:id="@+id/ticket_description"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="5.5"
                android:textStyle="bold"
                android:paddingEnd="8dp"
                android:ellipsize="end"
                android:maxLines="3"
                android:textSize="14sp" />

            <Button
                android:id="@+id/not_ticket_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="?android:attr/selectableItemBackgroundBorderless"
                android:layout_weight="1.5"
                android:drawableBottom="@drawable/not_ticket_icon" />

            <Button
                android:id="@+id/update_status_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="?android:attr/selectableItemBackgroundBorderless"
                android:layout_marginTop="16dp"
                android:layout_weight="1.5"
                android:drawableBottom="@drawable/ongoing_icon"/>

            <Button
                android:id="@+id/close_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_weight="1.5"
                android:background="?android:attr/selectableItemBackgroundBorderless"
                android:drawableBottom="@drawable/close_icon" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/solution_view"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:layout_below="@id/ticket_status"
            android:orientation="horizontal"
            android:weightSum="10"
            android:visibility="invisible">

            <EditText
                android:id="@+id/solution_edit_text_view"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/solution_hint"
                android:layout_weight="7"
                android:importantForAutofill="no" />

            <Button
                android:id="@+id/solution_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:text="@string/solution_button_text"
                android:textStyle="bold"
                android:clickable="false"/>

        </LinearLayout>

        <TextView
            android:id="@+id/expanded_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ticket_default_solution"
            android:textSize="20sp"
            android:textColor="@android:color/black"
            android:layout_marginHorizontal="16dp"
            android:layout_marginBottom="8dp"
            android:layout_below="@id/solution_view"
            android:visibility="gone" />

    </RelativeLayout>



    <TextView
        android:id="@+id/spacing"
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:text=" "
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout" />

</androidx.cardview.widget.CardView>